# django-custom-user

./: README.md  db.sqlite3  manage.py  pyproject.toml
authorization/: admin.py  forms.py  models.py
authorization/migrations/: 0001_initial.py
custonm_user_project/: asgi.py  settings.py  urls.py  wsgi.py
templates/: home.html  login.html  signup.html
